// Copyright Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// $title: List Entry
// $description: A template designed to let you perform list checking operations.
// $location: https://istio.io/docs/reference/config/policy-and-telemetry/templates/listentry.html
// $aliases:
// $  - /docs/reference/config/template/listentry.html

// The `listentry` template is designed to let you perform list check operations
// with the [list](https://istio.io/docs/reference/config/policy-and-telemetry/adapters/list/) adapter.
//
// Example config:
//
// ```yaml
// apiVersion: "config.istio.io/v1alpha2"
// kind: instance
// metadata:
//   name: appversion
//   namespace: istio-system
// spec:
//   compiledTemplate: listentry
//   params:
//     value: source.labels["version"]
// ```
package listEntry;

import "mixer/adapter/model/v1beta1/extensions.proto";

import "policy/v1beta1/type.proto";


option (istio.mixer.adapter.model.v1beta1.template_variety) = TEMPLATE_VARIETY_CHECK;

// The `listentry` template is used to verify the presence/absence of a string
// within a list.
//
// When writing the configuration, the value for the fields associated with this template can either be a
// literal or an [expression](https://istio.io/docs/reference//config/policy-and-telemetry/expression-language/). Please note that if the datatype of a field is not istio.policy.v1beta1.Value,
// then the expression's [inferred type](https://istio.io/docs/reference//config/policy-and-telemetry/expression-language/#type-checking) must match the datatype of the field.
message Template {
    // Specifies the entry to verify in the list. This value can either be a string or an IP address.
    istio.policy.v1beta1.Value value = 1;
}
